# wrf_ensembly

./: CLAUDE.md  README.md  aeolus_l2a_dump.txt  config.toml  config_sample.toml  harp2_dump.txt  harp2dump.txt  imerg_land_sea_ncdump.txt  mkdocs.yml  pyproject.toml  test_msg_seviri.py
.github/workflows/: docs.yml
docs/: configuration.md  core-concepts.md  installation.md  observations.md  postprocess.md  usage.md
obs_scripts/: aeolus_l2b.py  remotap_spexone.py
tutorial/: config.toml  tutorial_plots.ipynb
wrf_ensembly/: __init__.py  __main__.py  cdo.py  cli.py  click_utils.py  config.py  console.py  cycling.py  diagnostics.py  experiment.py  external.py  fortran_namelists.py  jobfiles.py  member_info.py  namelist.py  nco.py  obs_sequence.py  observations.py  pertubations.py  perturbations.py  plotting.py  postprocess.py  processors.py  statistics.py  templates.py  test_postprocess.py  update_bc.py  utils.py  wrf.py  wrf_ensembly.py
wrf_ensembly/commands/: __init__.py  ensemble.py  experiment.py  observations.py  plots.py  postprocess.py  preprocess.py  slurm.py  status.py  validation.py
wrf_ensembly/config_templates/: aris_chem_4.5.2.toml  default.toml  iridium_chem_4.6.0.toml
wrf_ensembly/experiment/: __init__.py  database.py  dataclasses.py  experiment.py  inflation.py  observations.py  paths.py  state_machine.py
wrf_ensembly/observation/: __init__.py  cli.py  operations.py
wrf_ensembly/observation/converters/: __init__.py  aeronet.py
wrf_ensembly/observations/: __init__.py  cli.py  dart.py  definitions.py  io.py  operations.py  plotting.py  superobbing.py  superorbing.py  utils.py
wrf_ensembly/observations/converters/: __init__.py  aeolus_l2a.py  aeolus_l2b.py  aeronet.py  earthcare_ebd.py  grasp_harp2.py  modis.py  msg_seviri.py  remotap_spexone.py  template.py  viirs.py
wrf_ensembly/observations/operators/: aeolus_hlos.py
wrf_ensembly/postprocess/: __init__.py  compression.py  streaming_pipeline.py  streaming_writer.py  utils.py
wrf_ensembly/superobs/: __init__.py  binning.py
wrf_ensembly/template_files/: slurm_job.sh.j2
wrf_ensembly/validation/: __init__.py  first_departures.py  model_interpolation.py  model_interpolation_per_member.py  observation_error.py
