[tool.poetry]
name = "wrf-ensembly"
version = "0.3.4"
description = "Support scripts for using DART w/ WRF"
authors = ["Thanasis Georgiou <ageorgiou@noa.gr>"]
readme = "README.md"
packages = [{ include = "wrf_ensembly" }]

[tool.poetry.scripts]
wrf-ensembly = "wrf_ensembly:wrf_ensembly.cli"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
netcdf4 = "^1.6.2"
tomli = "^2.0.1"
rich = "^13.3.5"
jinja2 = "^3.1.2"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
tomli-w = "^1.0.0"
xarray = "^2023.5.0"
cartopy = "^0.22.0"
pytest = "^7.4.3"
click = "^8.1.7"
setuptools = "^69.1.1"
dataclass-binder = "^0.3.4"
mashumaro = { extras = ["toml"], version = "^3.12" }


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["wrf_ensembly"]
float_to_top = true
